--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     build: ./frontend
     container_name: frontend
     ports:
-      - 4200:4200
-    volumes:
-      - ./reverse-proxy/http-taiko.conf.template:/etc/nginx/nginx.conf:ro
+      - 80:80
+    # volumes:
+      # - ./reverse-proxy/http-taiko.conf.template:/etc/nginx/nginx.conf:ro
     depends_on:
       - backend
