--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,12 +29,15 @@ dependencies {
 	// Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql:42.7.1'
+	// implementation 'org.liquibase:liquibase-core:4.4.3'
 
 	// REST
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	// Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
 	// Auditing
