--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - ./postgres/create_schema.sql:/docker-entrypoint-initdb.d/create_schema.sql:ro
       - ./data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD", "pg_isready -U postgres"]
+    # healthcheck:
+    #   test: ["CMD", "pg_isready -U postgres"]
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -33,8 +33,12 @@ services:
     build: ./frontend
     container_name: frontend
     ports:
-      - 80:80
+      - 4200:80
     # volumes:
       # - ./reverse-proxy/http-taiko.conf.template:/etc/nginx/nginx.conf:ro
     depends_on:
       - backend
+
+volumes:
+  data:
+
