--- a/gauge/env/default/default.properties
+++ b/gauge/env/default/default.properties
@@ -23,3 +23,6 @@ csv_delimiter = ,
 
 # Allows steps to be written in multiline
 allow_multiline_step = false
+
+# Allows steps parameter values to be written in tables
+allow_scenario_datatable = true
