add command for formatting

--- a/gauge/package.json
+++ b/gauge/package.json
@@ -2,7 +2,8 @@
   "name": "gauge-taiko-template",
   "description": "Starter template for writing JavaScript tests for Gauge",
   "scripts": {
-    "test": "gauge run specs/"
+    "test": "gauge run specs/",
+    "format-specs": "gauge format specs/"
   },
   "dependencies": {
     "taiko": "latest"
