--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 	// Database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql:42.7.1'
-	// implementation 'org.liquibase:liquibase-core:4.4.3'
+	implementation 'org.liquibase:liquibase-core:4.17.2'
 
 	// REST
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -47,7 +47,10 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	// Testing
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 tasks.named('test') {
