--- a/backend/src/main/resources/db/changelog/changes/2023-12-17-init.yml
+++ b/backend/src/main/resources/db/changelog/changes/2023-12-17-init.yml
@@ -43,6 +43,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: title
+                  type: varchar(255)
+                  constraints:
+                    nullable: true
+              - column:
                   name: first_name
                   type: varchar(255)
                   constraints:
