--- a/backend/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yml
@@ -1,8 +1,7 @@
 databaseChangeLog:
+    - includeAll:
+        path: db/changelog/changes/
+        
     -  preConditions:  
         -  runningAs:  
             username:  postgres
-
-    - include:
-        file: changes/2023-12-17-init.yml
-        relativeToChangelogFile: true
