--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'org.hibernate.orm' version '6.4.1.Final'
 	id 'org.graalvm.buildtools.native' version '0.9.28'
+	id 'com.diffplug.spotless' version '6.22.0'
 }
 
 group = 'de.selmaier'
@@ -67,3 +68,15 @@ hibernate {
 	}
 }
 
+spotless {
+	java {
+		target 'src/**/*.java'
+		importOrder()
+		removeUnusedImports()
+		googleJavaFormat()
+		formatAnnotations()
+		cleanthat()
+	}
+}
+
+compileJava.dependsOn 'spotlessApply'
