--- a/local.env
+++ b/local.env
@@ -1,5 +1,16 @@
+
 DB_HOST=localhost
 DB_PORT=5432
+
 DB_DATABASE=taiko
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=taiko
+
+SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/taiko
+SPRING_DATASOURCE_USERNAME=postgres
+SPRING_DATASOURCE_PASSWORD=postgres
+SPRING_JPA_HIBERNATE_DDL_AUTO=validate
