fix liquibase schema and default schema issue

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Liquibase Configuration
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yml
+spring.liquibase.liquibaseSchema=taiko
+spring.liquibase.defaultSchema=taiko
+
+# Logging Configuration (Remove in production)
+logging.level.org.springframework.security.web.csrf=TRACE
