make liquibase configurable from docker

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Liquibase Configuration
-spring.liquibase.enabled=true
+spring.liquibase.enabled=${LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yml
-spring.liquibase.liquibaseSchema=taiko
-spring.liquibase.defaultSchema=taiko
+spring.liquibase.liquibaseSchema=${LIQUIBASE_LIQUIBASE_SCHEMA:taiko}
+spring.liquibase.defaultSchema=${LIQUIBASE_DEFAULT_SCHEMA:taiko}
 
 # Logging Configuration (Remove in production)
 logging.level.org.springframework.security.web.csrf=TRACE
