--- a/local.env
+++ b/local.env
@@ -14,3 +14,7 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://database:5432/taiko
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_JPA_HIBERNATE_DDL_AUTO=validate
+
+LIQUIBASE_ENABLED=true
+LIQUIBASE_LIQUIBASE_SCHEMA=taiko
+LIQUIBASE_DEFAULT_SCHEMA=taiko
