--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.0'
+	id 'org.springframework.boot' version '3.2.1'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'org.hibernate.orm' version '6.4.1.Final'
 	id 'org.graalvm.buildtools.native' version '0.9.28'
@@ -37,9 +37,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
-	// Security
+	// Security (set up later)
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	// implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
 	// Auditing
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
