send login request to backend

--- a/frontend/default.conf
+++ b/frontend/default.conf
@@ -1,6 +1,6 @@
     server {
         listen 80;
-        server_name kanban-ui;
+        server_name taiko-ui;
         root /usr/share/nginx/html/frontend/browser;
         index index.html index.html;
 
